// Copyright Â© 2019 Binance
//
// This file is part of Binance. The full Binance copyright notice, including
// terms governing use, modification, and redistribution, is contained in the
// file LICENSE at the root of the source code distribution tree.

syntax = "proto3";
package binance.tsslib.ecdsa.signing;
option go_package = "ecdsa/signing";

/*
 * Represents a P2P message sent to each party during Round 1 of the ECDSA TSS signing protocol.
 */
message SignRound1Message1 {
    bytes c = 1;
    repeated bytes range_proof_alice = 2;
}

/*
 * Represents a BROADCAST message sent to all parties during Round 1 of the ECDSA TSS signing protocol.
 */
message SignRound1Message2 {
    bytes commitment = 1;
}

/*
 * Represents a P2P message sent to each party during Round 2 of the ECDSA TSS signing protocol.
 */
message SignRound2Message {
    bytes c1 = 1;
    bytes c2 = 2;
    repeated bytes proof_bob = 3;
    repeated bytes proof_bob_wc = 4;
}

/*
 * Represents a BROADCAST message sent to all parties during Round 3 of the ECDSA TSS signing protocol.
 */
message SignRound3Message {
    bytes theta = 1;
}

/*
 * Represents a BROADCAST message sent to all parties during Round 4 of the ECDSA TSS signing protocol.
 */
message SignRound4Message {
    repeated bytes de_commitment = 1;
    bytes proof_alpha_x = 2;
    bytes proof_alpha_y = 3;
    bytes proof_t = 4;
}

/*
 * Represents a BROADCAST message sent to all parties during Round 5 of the ECDSA TSS signing protocol.
 */
message SignRound5Message {
    bytes commitment = 1;
}

/*
 * Represents a BROADCAST message sent to all parties during Round 6 of the ECDSA TSS signing protocol.
 */
message SignRound6Message {
    repeated bytes de_commitment = 1;
    bytes proof_alpha_x = 2;
    bytes proof_alpha_y = 3;
    bytes proof_t = 4;
    bytes v_proof_alpha_x = 5;
    bytes v_proof_alpha_y = 6;
    bytes v_proof_t = 7;
    bytes v_proof_u = 8;
}

/*
 * Represents a BROADCAST message sent to all parties during Round 7 of the ECDSA TSS signing protocol.
 */
message SignRound7Message {
    bytes commitment = 1;
}

/*
 * Represents a BROADCAST message sent to all parties during Round 8 of the ECDSA TSS signing protocol.
 */
message SignRound8Message {
    repeated bytes de_commitment = 1;
}

/*
 * Represents a BROADCAST message sent to all parties during Round 9 of the ECDSA TSS signing protocol.
 */
message SignRound9Message {
    bytes s = 1;
}
